2018-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad, src/algebra/rule.spad,
	src/interp/pf2sex.boot: Remove strange 'eval'

2018-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffhom.spad, src/algebra/wtpol.spad,
	src/algebra/xpoly.spad: Minor cleanups

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/*: Change 'factors' to 'factorList' when possible

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Change exponent of Factored to NNI
	src/algebra/*: Adjust

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Misc cleanup

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Move 'mergeFactors' to Factored
	src/algebra/integer.spad, src/input/bugs2017.input: Adjust

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Fix 'map' to agree with documentation

2018-04-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Rewrite 'makeFR' and fix handling
	arguments with zero factors

2018-04-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Rewrite and optimize 'gcd', '*', '='

2018-04-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Rewrite 'exquo' to avoid
	negative exponents

2018-04-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Change the return type of
	'factorList' to be more readable
	src/doc/htex/FR.htex, src/doc/htex/FR2.htex,
	src/doc/htex/ug08.htex, src/input/algfacob.input,
	src/input/fr.input, src/input/galois.input,
	src/input/poly.input, src/algebra/*: Adjust

2018-04-12  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/lll.spad: add extendedLLL algorithm

2018-04-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mfinfact.spad: Fix 'factor'

2018-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/nruncomp.boot,
	src/interp/postpar.boot: Misc cleanup

2018-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
