@@ -45,7 +45,7 @@ PolynomialEvaluationUtilities : Exports == Implementation where
     SmpRep ==>  Union(Integer, VPoly)
 
     Qmul ==> QSMULMOD32$Lisp
-    Qmuladd ==> QSMULADDMOD64_-32$Lisp
+    Qmuladd ==> QSMULADDMOD64_32$Lisp
 
     eval1a(pol : MP, pt : Integer, pss : PSS) : Integer ==
         p := pss.prime
