@@ -24,8 +24,8 @@ ModularFactorization : Exports == Implementation where
 
     import from U32VectorPolynomialOperations
 
-    Qmuladd  ==> QSMULADD64_-32$Lisp
-    Qrem ==> QSMOD64_-32$Lisp
+    Qmuladd  ==> QSMULADD64_32$Lisp
+    Qrem ==> QSMOD64_32$Lisp
 
     mvmul(m : U32Matrix, v : U32Vector, p : Integer) : U32Vector ==
         nr := nrows(m)
