@@ -83,7 +83,7 @@ InnerMatrixLinearAlgebraFunctions(R, Row, Col, M) : _
             js := qconvert(j)@SingleInteger
             ms := qconvert(maxC)@SingleInteger
             for k1 in js..ms repeat
-                qsetelt!(x, k, k1, QSMULADDMOD64_-32(pp1,
+                qsetelt!(x, k, k1, QSMULADDMOD64_32(pp1,
                            qelt(x, i, k1), qelt(x, k, k1), p)$Lisp)
 
         rowEchelon y ==
