@@ -85,7 +85,7 @@ NaiveBeckermannLabahnModular : with
 
   import from U32VectorPolynomialOperations
 
-  muladdmod ==> QSMULADDMOD64_-32$Lisp
+  muladdmod ==> QSMULADDMOD64_32$Lisp
   mulmod ==> QSMULMOD32$Lisp
 
   vector_shift : PA -> Void
@@ -424,7 +424,7 @@ InnerModularHermitePade : with
     PEVALUT ==> PolynomialEvaluationUtilities
 
     Qmul ==> QSMULMOD32$Lisp
-    Qmuladd ==> QSMULADDMOD64_-32$Lisp
+    Qmuladd ==> QSMULADDMOD64_32$Lisp
 
     import from U32VectorPolynomialOperations
     import from OutputForm
