@@ -16,8 +16,8 @@ DoubleFloatVector : VectorCategory DoubleFloat with
     qelt(x, i) == Qelt1(x, i)
     qsetelt!(x, i, s) == Qsetelt1(x, i, s)
     Qsize ==> DLEN$Lisp
-    Qnew ==> MAKE_-DOUBLE_-VECTOR$Lisp
-    Qnew1 ==> MAKE_-DOUBLE_-VECTOR1$Lisp
+    Qnew ==> MAKE_DOUBLE_VECTOR$Lisp
+    Qnew1 ==> MAKE_DOUBLE_VECTOR1$Lisp
 
     #x                          == Qsize x
     minIndex x                  == 0
@@ -53,8 +53,8 @@ DoubleFloatMatrix : MatrixCategory(DoubleFloat,
     Qsetelt2 ==> DSETAREF2$Lisp
     Qnrows ==> DANROWS$Lisp
     Qncols ==> DANCOLS$Lisp
-    Qnew ==> MAKE_-DOUBLE_-MATRIX$Lisp
-    Qnew1 ==> MAKE_-DOUBLE_-MATRIX1$Lisp
+    Qnew ==> MAKE_DOUBLE_MATRIX$Lisp
+    Qnew1 ==> MAKE_DOUBLE_MATRIX1$Lisp
 
     minRowIndex x == 0
     minColIndex x == 0
@@ -94,7 +94,7 @@ ComplexDoubleFloatVector : VectorCategory Complex DoubleFloat with
     qelt(x, i) == Qelt1(x, i)
     qsetelt!(x, i, s) == Qsetelt1(x, i, s)
     Qsize ==> CDLEN$Lisp
-    Qnew ==> MAKE_-CDOUBLE_-VECTOR$Lisp
+    Qnew ==> MAKE_CDOUBLE_VECTOR$Lisp
 
     #x                          == Qsize x
     minIndex x                  == 0
@@ -133,7 +133,7 @@ ComplexDoubleFloatMatrix : MatrixCategory(Complex DoubleFloat,
     Qsetelt2 ==> CDSETAREF2$Lisp
     Qnrows ==> CDANROWS$Lisp
     Qncols ==> CDANCOLS$Lisp
-    Qnew ==> MAKE_-CDOUBLE_-MATRIX$Lisp
+    Qnew ==> MAKE_CDOUBLE_MATRIX$Lisp
 
     minRowIndex x == 0
     minColIndex x == 0
