@@ -385,6 +385,8 @@ DoubleFloat() : Join(FloatingPointSystem, DifferentialRing, OpenMath,
      if wholeObj then
        OMputEndObject(dev)
 
+   max_SF ==> MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp
+
    checkComplex(x : %) : % == c_to_r(x)$Lisp
 
    base()           == FLOAT_-RADIX(0$%)$Lisp
@@ -395,14 +397,15 @@ DoubleFloat() : Join(FloatingPointSystem, DifferentialRing, OpenMath,
      base() = 2 => precision()
      base() = 16 => 4*precision()
      wholePart(precision()*log2(base()::%))::PositiveInteger
-   max()            == MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp
+   max()            == max_SF
    min()            == MOST_-NEGATIVE_-DOUBLE_-FLOAT$Lisp
    order(a) == precision() + exponent a - 1
-   0                == FLOAT(0$Lisp, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
-   1                == FLOAT(1$Lisp, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
+   0                == FLOAT(0$Lisp, max_SF)$Lisp
+   1                == FLOAT(1$Lisp, max_SF)$Lisp
    -- rational approximation to e accurate to 23 digits
-   exp1()           == FLOAT(534625820200, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp / FLOAT(196677847971, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
-   pi()             == FLOAT(PI$Lisp, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
+   exp1()           == FLOAT(534625820200, max_SF)$Lisp /
+                         FLOAT(196677847971, max_SF)$Lisp
+   pi()             == FLOAT(PI$Lisp, max_SF)$Lisp
 
    convert(x : %) : String ==
        FORMAT(NIL$Lisp, format, x)$Lisp pretend String
@@ -427,7 +430,7 @@ DoubleFloat() : Join(FloatingPointSystem, DifferentialRing, OpenMath,
    log10 x          == checkComplex LOG10(x)$Lisp
    x : % ^ i : Integer == expt_DF_I(x, i)$Lisp
    x : % ^ y : %       == checkComplex expt_DF(x, y)$Lisp
-   coerce(i : Integer) : % == FLOAT(i, MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
+   coerce(i : Integer) : % == FLOAT(i, max_SF)$Lisp
    exp x            == exp_DF(x)$Lisp
    log x            == checkComplex log_DF(x)$Lisp
    qlog x           == qlog_DF(x)$Lisp
