@@ -275,11 +275,11 @@ U32VectorPolynomialOperations() : Export == Implementation where
 
     Implementation ==> add
 
-        Qmuladdmod ==> QSMULADDMOD64_-32$Lisp
-        Qmuladd  ==> QSMULADD64_-32$Lisp
+        Qmuladdmod ==> QSMULADDMOD64_32$Lisp
+        Qmuladd  ==> QSMULADD64_32$Lisp
         Qmul ==> QSMULMOD32$Lisp
-        Qdot2 ==> QSDOT2MOD64_-32$Lisp
-        Qrem ==> QSMOD64_-32$Lisp
+        Qdot2 ==> QSDOT2MOD64_32$Lisp
+        Qrem ==> QSMOD64_32$Lisp
         modInverse ==> invmod
 
         copy_first(np : PA, op : PA, n : Integer) : Void ==
