@@ -1,3 +1,11 @@
+2018-05-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/evalut.spad, src/algebra/ffact.spad,
+	src/algebra/float.spad, src/algebra/matfuns.spad,
+	src/algebra/modhpsol.spad, src/algebra/numarr.spad,
+	src/algebra/sf.spad, src/algebra/u32vec.spad,
+	src/lisp/primitives.lisp: More regular names of primitives
+
 2018-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/fspace.spad, src/algebra/rule.spad,
